--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="js-scroll-trigger" href="#about">About Me</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="js-scroll-trigger" href="#services">Services</a>
+        <a class="js-scroll-trigger" href="#skill-set">My Skills</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -59,7 +59,7 @@
       <h3 class="mb-5">
         <em>Software Engineer | Drummer</em>
       </h3>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About Me</a>
     </div>
     <div class="overlay"></div>
   </header>
@@ -72,17 +72,17 @@
           <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
           <p class="lead mb-5">This theme features a flexible, UX friendly sidebar menu and stock photos from our friends at
             <a href="https://unsplash.com/">Unsplash</a>!</p>
-          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#services">What We Offer</a>
+          <a class="btn btn-dark btn-xl js-scroll-trigger" href="#skill-set">Skills</a>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Services -->
-  <section class="content-section bg-primary text-white text-center" id="services">
+  <!-- My Skills -->
+  <section class="content-section bg-primary text-white text-center" id="skill-set">
     <div class="container">
       <div class="content-section-heading">
-        <h3 class="text-secondary mb-0">Services</h3>
+        <h3 class="text-secondary mb-0">skill-set</h3>
         <h2 class="mb-5">What We Offer</h2>
       </div>
       <div class="row">
