Add picture, css styling

--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
   <section class="content-section bg-light" id="about">
     <div class="container text-center">
       <div class="row">
-        <div class="col-lg-3 my-pic"></div>
+        <div class="col-lg-3 my-pic">
+          <img class='my-img' src='./img/Me2.png' alt='Guy B. Benson Portrait'>
+        </div>
         <div class="col-lg-9 mx-auto">
           <h2>A graduate student in aerospace engineering walks into a bar...</h2>
           <p class="lead mb-5">This is how my story in software began more than two decades ago. (If you want to hear the full story, let me know - it's a fun story.) I am an aerospace engineer by education and a software engineer by experience. I’ve always been intrigued by using software to solve practical problems, whether it be providing an HTML interface for viewing invoices or modeling the fluid flow through a rocket thruster. I recently decided to upgrade my skill set with an immersive software engineering program at General Assembly, and I am now taking my ambitions to the next level. I am eager and excited to take on those sometimes seemingly insurmountable challenges that affect all of our society, and am especially interested in those problems affecting the underprivileged.
