--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <!-- About -->
   <section class="content-section bg-light" id="about">
-    <div class="container text-center">
+    <div class="container-fluid text-center about-me">
       <div class="row">
         <div class="col-lg-3 my-pic">
           <img class='my-img' src='./img/Me2.png' alt='Guy B. Benson Portrait'>
