--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <!-- CUSTOM LINKS START HERE -->
+  <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+  <!-- CUSTOM LINKS END HERE -->
 
   <title>Guy B. Benson - Portfolio</title>
 
@@ -86,46 +89,46 @@
     <div class="container">
       <div class="content-section-heading">
         <h3 class="text-secondary mb-0">skill-set</h3>
-        <h2 class="mb-5">What We Offer</h2>
+        <!-- <h2 class="mb-5">What We Offer</h2> -->
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-screen-smartphone"></i>
           </span>
-          <h4>
+          <!-- <h4>
             <strong>Responsive</strong>
           </h4>
-          <p class="text-faded mb-0">Looks great on any screen size!</p>
+          <p class="text-faded mb-0">Looks great on any screen size!</p> -->
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-pencil"></i>
           </span>
-          <h4>
+          <!-- <h4>
             <strong>Redesigned</strong>
           </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p>
+          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p> -->
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-like"></i>
           </span>
-          <h4>
+          <!-- <h4>
             <strong>Favorited</strong>
           </h4>
           <p class="text-faded mb-0">Millions of users
             <i class="fas fa-heart"></i>
-            Start Bootstrap!</p>
+            Start Bootstrap!</p> -->
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-mustache"></i>
           </span>
-          <h4>
-            <strong>Question</strong>
-          </h4>
-          <p class="text-faded mb-0">I mustache you a question...</p>
+            <!-- <h4>
+              <strong>Question</strong>
+            </h4>
+            <p class="text-faded mb-0">I mustache you a question...</p> -->
         </div>
       </div>
     </div>
