Update footer, remove some text

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="col-lg-9 mx-auto">
           <h2>A graduate student in aerospace engineering walks into a bar...</h2>
-          <p class="lead mb-5">This is how my story in software began more than two decades ago. (If you want to hear the full story, let me know - it's a fun story.) I am an aerospace engineer by education and a software engineer by experience. I’ve always been intrigued by using software to solve practical problems, whether it be providing an HTML interface for viewing invoices or modeling the fluid flow through a rocket thruster. I recently decided to upgrade my skill set with an immersive software engineering program at General Assembly, and I am now taking my ambitions to the next level. I am eager and excited to take on those sometimes seemingly insurmountable challenges that affect all of our society, and am especially interested in those problems affecting the underprivileged.
+          <p class="lead mb-5">This is how my story in software began more than two decades ago. (If you want to hear the full story, let me know - it's a fun story.) I am an aerospace engineer by education and a software engineer by experience. I’ve always been intrigued by using software to solve practical problems, whether it be providing an HTML interface for viewing invoices or modeling the fluid flow through a rocket thruster. I recently decided to upgrade my skill set with an immersive software engineering program at General Assembly, and I am now taking my ambitions to the next level. I am eager and excited to take on those sometimes seemingly insurmountable challenges that affect us all - the more complicated, the better.
             </p>
           <a class="btn btn-dark btn-xl js-scroll-trigger" href="#skill-set">Skills</a>
         </div>
@@ -89,60 +89,41 @@
     <div class="container">
       <div class="content-section-heading">
         <h3 class="text-secondary mb-0">skill-set</h3>
-        <!-- <h2 class="mb-5">What We Offer</h2> -->
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-screen-smartphone"></i>
           </span>
-          <!-- <h4>
-            <strong>Responsive</strong>
-          </h4>
-          <p class="text-faded mb-0">Looks great on any screen size!</p> -->
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-pencil"></i>
           </span>
-          <!-- <h4>
-            <strong>Redesigned</strong>
-          </h4>
-          <p class="text-faded mb-0">Freshly redesigned for Bootstrap 4.</p> -->
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-like"></i>
           </span>
-          <!-- <h4>
-            <strong>Favorited</strong>
-          </h4>
-          <p class="text-faded mb-0">Millions of users
-            <i class="fas fa-heart"></i>
-            Start Bootstrap!</p> -->
         </div>
         <div class="col-lg-3 col-md-6">
           <span class="service-icon rounded-circle mx-auto mb-3">
             <i class="icon-mustache"></i>
           </span>
-            <!-- <h4>
-              <strong>Question</strong>
-            </h4>
-            <p class="text-faded mb-0">I mustache you a question...</p> -->
         </div>
       </div>
     </div>
   </section>
 
   <!-- Callout -->
-  <section class="callout">
+  <!-- <section class="callout">
     <div class="container text-center">
       <h2 class="mx-auto mb-5">Welcome to
         <em>your</em>
         next website!</h2>
       <a class="btn btn-primary btn-xl" href="https://startbootstrap.com/template-overviews/stylish-portfolio/">Download Now!</a>
     </div>
-  </section>
+  </section> -->
 
   <!-- Portfolio -->
   <section class="content-section" id="portfolio">
@@ -210,16 +191,16 @@
   </section>
 
   <!-- Map -->
-  <section id="contact" class="map">
+  <!-- <section id="contact" class="map">
     <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
     <br />
     <small>
       <a href="https://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A"></a>
     </small>
-  </section>
+  </section> -->
 
   <!-- Footer -->
-  <footer class="footer text-center">
+  <footer id="contact" class="footer text-center">
     <div class="container">
       <ul class="list-inline mb-5">
         <li class="list-inline-item">
@@ -238,7 +219,7 @@
           </a>
         </li>
       </ul>
-      <p class="text-muted small mb-0">Copyright &copy; Your Website 2019</p>
+      <p class="text-muted small mb-0">Copyright &copy; Guy B. Benson 2019</p>
     </div>
   </footer>
 
