Clean up images
Cleaned up images - removed the ones from the template that I wasn't
going to use, added new ones that fit better.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 <p class="mb-0">An interactive Gas Mileage Calculator with a running tally!</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/gas-mileage-calculator.png" alt="">
+            <img class="img-fluid" src="img/gas-mileage-calculator3.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -226,7 +226,7 @@
                 <p class="mb-0">Upload and tag images!</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/camera2.png" alt="">
+            <img class="img-fluid" src="img/camera3.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
@@ -237,11 +237,11 @@
                 <p class="mb-0">An interactive Tic-Tac-Toe game that saves your results!</p>
               </span>
             </span>
-            <img class="img-fluid" src="img/tic-tac-toe.png" alt="">
+            <img class="img-fluid" src="img/tic-tac-toe4.png" alt="">
           </a>
         </div>
         <div class="col-lg-6">
-          <a class="portfolio-item" href="#">
+          <a class="portfolio-item" href="#portfolio">
             <span class="caption">
               <span class="caption-content">
                 <h2>Internome</h2>
