Add full descriptions of projects

--- a/index.html
+++ b/index.html
@@ -212,7 +212,11 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Gas Mileage Calculator</h2>
-                <p class="mb-0">An interactive Gas Mileage Calculator with a running tally!</p>
+                <p class="mb-0">
+                  My second project at General Assembly a Gas Mileage Calculator, this project features a client built in
+                  JavaScript, HTML and CSS/Sass, with additional Bootstrap components and using Handlebars for detail entries.
+                  The API is a Ruby on Rails implementation on top of a PostgreSQL relational database and deployed on Heroku.
+                </p>
               </span>
             </span>
             <img class="img-fluid" src="img/gas-mileage-calculator3.png" alt="">
@@ -222,8 +226,13 @@
           <a class="portfolio-item" href="https://gbbenson68.github.io/caGUsabi-client/" target="_blank">
             <span class="caption">
               <span class="caption-content">
-                <h2>Image Uploader</h2>
-                <p class="mb-0">Upload and tag images!</p>
+                <h2>Cagusabi Image Uploader</h2>
+                <p class="mb-0">
+                  This is my fork of our group project at General Assembly, an image uploader. With a client built in JavaScript,
+                  HTML and CSS/Sass, this app makes extensive use of Bootstrap modals. The API was built in Express.js,
+                  with Mongoose.js on top of MongoDB. The API is deployed on Heroku, utilizing buckets on Amazon Web Services for
+                  storing images.
+                </p>
               </span>
             </span>
             <img class="img-fluid" src="img/camera3.png" alt="">
@@ -234,7 +243,11 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Tic Tac Toe</h2>
-                <p class="mb-0">An interactive Tic-Tac-Toe game that saves your results!</p>
+                <p class="mb-0">
+                  My first project at General Assembly. The client is built in JavaScript, HTML, CSS/Sass and Bootstrap. The API
+                  used was supplied by General Assembly. In the near future, the GA-provided API will be supplanted with a
+                  bespoke API using Express.js, Mongoose.js and MongoDB.
+                </p>
               </span>
             </span>
             <img class="img-fluid" src="img/tic-tac-toe4.png" alt="">
@@ -245,7 +258,10 @@
             <span class="caption">
               <span class="caption-content">
                 <h2>Internome</h2>
-                <p class="mb-0">An interval-base metronome for drummers.</p>
+                <p class="mb-0">
+                  Although this is my "capstone" project, it is still under heavy development. The client is built React with
+                  Bootstrap, on top an API built in Express.js, with Mongoose.js used for modeling on top of MongoDB. It is
+                  deployed on Heroku. Please check back soon for updates!</p>
               </span>
             </span>
             <img class="img-fluid" src="img/Met-med.jpg" alt="">
