Fix grammar mistake

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               <span class="caption-content">
                 <h2>Internome</h2>
                 <p class="mb-0">
-                  Although this is my "capstone" project, it is still under heavy development. The client is built React with
+                  Although this is my "capstone" project, it is still under heavy development. The client is built using React with
                   Bootstrap, on top an API built in Express.js, with Mongoose.js used for modeling on top of MongoDB. It is
                   deployed on Heroku. Please check back soon for updates!</p>
               </span>
