Change some text in About Me

--- a/index.html
+++ b/index.html
@@ -75,8 +75,18 @@
         </div>
         <div class="col-lg-9 mx-auto">
           <h2>A graduate student in aerospace engineering walks into a bar...</h2>
-          <p class="lead mb-5">This is how my story in software began more than two decades ago. (If you want to hear the full story, let me know - it's a fun story.) I am a software engineer by experience and an aerospace engineer by education. I’ve always been intrigued by using software to solve practical problems, whether it be providing an HTML interface for viewing invoices or modeling the fluid flow through a rocket thruster. I recently decided to upgrade my skill set with an immersive software engineering program at General Assembly, and I am now taking my ambitions to the next level. I am eager and excited to take on those sometimes seemingly insurmountable challenges that affect us all.
-            </p>
+          <p class="lead mb-5">
+            This event marks the beginning of my transition into software and software development. Although an aerospace engineer
+            by education, I've always used practical software solutions to solve problem in the workplace, using a variety of technologies
+            such as PL/SQL, Bash shell, C++, Perl, HTML and CSS, often together. I recently decided to upgrade my skill
+            set with an immersive software engineering program at General Assembly, and I am now taking my ambitions to the next
+            level. I am eager and excited to take on those sometimes seemingly insurmountable challenges that affect us all.
+          </p>
+          <p><i>
+            Interested in hearing the full story of what happened when I walked into the bar? <a class='text-white' href='#contact'>Get in touch with me</a> and I'll share
+            it with you! (I love telling the story.)
+          </i></p>
+          <br/>
           <a class="btn btn-dark btn-md js-scroll-trigger" href="#skill-set">
             <i class="fas fa-chevron-down"></i>
           </a>
