Some text updates

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
             by education, I've always used practical software solutions to solve problem in the workplace, using a variety of technologies
             such as PL/SQL, Bash shell, C++, Perl, HTML and CSS, often together. I recently decided to upgrade my skill
             set with an immersive software engineering program at General Assembly, and I am now taking my ambitions to the next
-            level. I am eager and excited to take on those sometimes seemingly insurmountable challenges that affect us all.
+            level using my new knowledge in JavaScript, Ruby, Rails, Express.js, MongoDB and React. I am eager and excited to take on those
+            sometimes seemingly insurmountable challenges that affect us all.
           </p>
           <p><i>
-            Interested in hearing the full story of what happened when I walked into the bar? <a class='text-white' href='#contact'>Get in touch with me</a> and I'll share
-            it with you! (I love telling the story.)
+            Interested in hearing more of the story of what happened when I walked into the bar? <a class='text-white' href='#contact'>Let's talk!</a>
           </i></p>
           <br/>
           <a class="btn btn-dark btn-md js-scroll-trigger" href="#skill-set">
