Add changes to HTML

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
   <section class="content-section bg-light" id="resume">
     <div class="container text-center">
       <h2 class="mb-4">Interested?</h2>
-      <a href="./public/Benson.Guy.2019.pdf" target="_blank" class="btn btn-lg btn-dark">Get my resume!</a>
+      <a href="./public/GuyBenson-Resume-20190905.pdf" target="_blank" class="btn btn-lg btn-dark">Get my resume!</a>
       <!--
       <br/>
       <a class="btn btn-primary btn-md js-scroll-trigger sticky-bottom" href="#contact">
@@ -319,13 +319,11 @@
             <i class="icon-social-linkedin"></i>
           </a>
         </li>
-        <!--
         <li class="list-inline-item">
-          <a class="social-link rounded-circle text-white mr-3" href="#">
+          <a class="social-link rounded-circle bg-light mr-3" href="https://twitter.com/GuyTheBenson">
             <i class="icon-social-twitter"></i>
           </a>
         </li>
-        -->
         <li class="list-inline-item">
           <a class="social-link rounded-circle bg-light" href="https://github.com/gbbenson68">
             <i class="icon-social-github"></i>
